# atgo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  LOCAL_SETUP.md  PRE_PUBLISH_AUDIT.md  README.md  SECURITY.md  docker-compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  secrets-scan.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/atgo_api/: __init__.py  config.py  constants.py  db.py  deps.py  main.py  middleware.py  models.py  schemas.py  security.py
apps/api/atgo_api/routers/: admin.py  adms.py  api_keys.py  attendance.py  auth.py  billing.py  branches.py  departments.py  devices.py  dns_providers.py  employee_app.py  employees.py  hr.py  internal.py  odoo.py  sync.py  tenants.py
apps/api/atgo_api/services/: adms_parser.py  billing_verify.py  dns_verifier.py  dynadot.py  rate_limit.py
apps/api/scripts/: bootstrap_admin.py
apps/atgo_connect/: LICENSE  README.rst  __manifest__.py
apps/portal/: Dockerfile  next.config.js  package-lock.json  package.json
deploy/: DNS_SETUP.md  README.md  bootstrap_server.sh  bootstrap_windows.ps1  publish_github.sh  publish_odoo_module.sh  push_to_farm1.py  push_to_server.ps1  remote.sh
infra/caddy/: Caddyfile  Caddyfile.production
infra/postgres/: init.sql  init_002_features.sql  init_003_attendance_features.sql
scripts/: _atgo_hosts_writer.ps1  farm1_discover.py  gen_locale_skeletons.py  generate_module_assets.py  harden_ssh_farm1.py  simulate_zkteco.py  sync_hosts.ps1
(+80 files in other folders)
